[project]
name = "fullstack-llm-mlops-invoiceprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pytesseract>=0.3.13",
]
